# tensor

./: .gitignore  CMakeLists.txt  README.md  bench.c  sample.c  tensor.c  tensor.h  tensor_aux.c  tensor_aux.h  tensor_test.c
data/: result.txt  tensor.txt
